--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "jsonwebtoken": "^8.5.0",
+    "knex": "^0.16.3",
     "node": "^11.11.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "sqlite3": "^4.0.6"
   }
 }
